[tool.poetry]
name = "universe-simulator"
version = "0.1.0"
description = ""
authors = ["Kauri <kauri.off@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"
numpy = "^2.1"
numba = "^0.61.0"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
